feat(client.reactNative): :sparkles: Finished setting up redux, finished setting up useTranslationHook and refactored dropdown
Setup redux global state to handle language settings. Finished implementing the useTranslation hook, to correctly read xml files for translations, based on the current language. Refactored the dropdown, so we no longer rely on a dependency for it. Added additional prettier configurations. Removed unused dependencies.

--- a/reeltok.client/reeltok.client.reactNative/assets/translations/en_GB.xml
+++ b/reeltok.client/reeltok.client.reactNative/assets/translations/en_GB.xml
@@ -4,11 +4,14 @@
     <password>Password</password>
   </common>
   <login>
-      <login>Login</login>
+    <login>Login</login>
     <orSignUpIfYouAreNew>... or sign up if you are new!</orSignUpIfYouAreNew>
   </login>
   <signUp>
     <signUp>Sign up</signUp>
     <orLoginIfYouArentNew>... or login if you aren't new!</orLoginIfYouArentNew>
   </signUp>
+  <settings>
+    <settings>Settings</settings>
+  </settings>
 </translations>
