--- a/reeltok.client/reeltok.client.reactNative/assets/translations/da_DK.xml
+++ b/reeltok.client/reeltok.client.reactNative/assets/translations/da_DK.xml
@@ -4,11 +4,14 @@
     <password>Adgangskode</password>
   </common>
   <login>
-      <login>Login</login>
+    <login>Login</login>
     <orSignUpIfYouAreNew>... eller tilmeld dig hvis du er ny!</orSignUpIfYouAreNew>
   </login>
   <signUp>
     <signUp>Tilmeld</signUp>
     <orLoginIfYouArentNew>... eller login hvis du ikke er ny!</orLoginIfYouArentNew>
   </signUp>
+  <settings>
+    <settings>Indstillinger</settings>
+  </settings>
 </translations>
