feat(client.reactNative): :sparkles: Add translations for subscribers and subscriptions in Danish and English

--- a/reeltok.client/reeltok.client.reactNative/public/translations/da_DK.xml
+++ b/reeltok.client/reeltok.client.reactNative/public/translations/da_DK.xml
@@ -14,4 +14,10 @@
   <settings>
     <settings>Indstillinger</settings>
   </settings>
+  <subscribers>
+    <subscribers>Abonnenter</subscribers>
+  </subscribers>
+  <subscriptions>
+    <subscriptions>Abonnementer</subscriptions>
+  </subscriptions>
 </translations>
