style(client.reactNative): :globe_with_meridians: Added some translations, to test its functionality. Works fine on my machine 👀

--- a/reeltok.client/reeltok.client.reactNative/public/translations/da_DK.xml
+++ b/reeltok.client/reeltok.client.reactNative/public/translations/da_DK.xml
@@ -2,6 +2,8 @@
   <common>
     <email>Email</email>
     <password>Adgangskode</password>
+    <subscribers>Abonnenter</subscribers>
+    <subscriptions>Abonnementer</subscriptions>
   </common>
   <login>
     <login>Login</login>
@@ -13,11 +15,15 @@
   </signUp>
   <settings>
     <settings>Indstillinger</settings>
+    <userDetails>Bruger informationer</userDetails>
+    <username>Brugernavn</username>
+    <email>Email</email>
+    <recommendations>Anbefalinger</recommendations>
+    <selectCategory>Vælg kategori</selectCategory>
+    <language>Sprog</language>
+    <logout>Log ud</logout>
   </settings>
-  <subscribers>
-    <subscribers>Abonnenter</subscribers>
-  </subscribers>
-  <subscriptions>
-    <subscriptions>Abonnementer</subscriptions>
-  </subscriptions>
+  <profile>
+    <posts>Indlæg</posts>
+  </profile>
 </translations>
