--- a/reeltok.client/reeltok.client.reactNative/public/translations/en_GB.xml
+++ b/reeltok.client/reeltok.client.reactNative/public/translations/en_GB.xml
@@ -2,6 +2,8 @@
   <common>
     <email>Email</email>
     <password>Password</password>
+    <subscribers>Subscribers</subscribers>
+    <subscriptions>Subscriptions</subscriptions>
   </common>
   <login>
     <login>Login</login>
@@ -13,11 +15,15 @@
   </signUp>
   <settings>
     <settings>Settings</settings>
+    <userDetails>User details</userDetails>
+    <username>Username</username>
+    <email>Email</email>
+    <recommendations>Recommendations</recommendations>
+    <selectCategory>Select category</selectCategory>
+    <language>Language</language>
+    <logout>Logout</logout>
   </settings>
-  <subscribers>
-    <subscribers>Subscribers</subscribers>
-  </subscribers>
-  <subscriptions>
-    <subscriptions>Subscriptions</subscriptions>
-  </subscriptions>
+  <profile>
+    <posts>Posts</posts>
+  </profile>
 </translations>
